added tenacity for rate limits

--- a/python/docs-oai-text-embedding-ada-002.ipynb
+++ b/python/docs-oai-text-embedding-ada-002.ipynb
@@ -19,7 +19,8 @@
     "import openai\n",
     "import os\n",
     "import json\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "from tenacity import retry, wait_random_exponential, stop_after_attempt"
    ]
   },
   {
@@ -221,14 +222,7 @@
     "    },\n",
     "]\n",
     "\n",
-    "# Function to generate embeddings for title and content fields\n",
-    "def generate_embeddings(text):\n",
-    "    response = openai.Embedding.create(\n",
-    "        input=text, engine=\"text-embedding-ada-002\")\n",
-    "    embeddings = response['data'][0]['embedding']\n",
-    "    return embeddings\n",
-    "\n",
-    "\n",
+    "@retry(wait=wait_random_exponential(min=1, max=20), stop=stop_after_attempt(6))\n",
     "# Function to generate embeddings for title and content fields\n",
     "def generate_embeddings(text):\n",
     "    response = openai.Embedding.create(\n",
